# VapourSynth-Bwdif

./: README.md  meson.build
Bwdif/: Bwdif.cpp  Bwdif.h  Bwdif.vcxproj  Bwdif.vcxproj.filters  Bwdif_AVX2.cpp  Bwdif_AVX512.cpp  Bwdif_SSE2.cpp
Bwdif/VCL2/: vectorf128.h  vectorf256.h
